# open-voice-pipeline

./: .env.voice.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-voice.html
docker/xtts/: Dockerfile  server.py
voice_pipeline/: __init__.py  app.py  config.py  pipeline.py  providers.py  routes.py
voice_pipeline/llm/: __init__.py  base.py  chat_service_adapter.py  runpod.py
voice_pipeline/stt/: __init__.py  base.py  gemini.py  whisper.py
voice_pipeline/transport/: __init__.py  dto.py  websocket.py
voice_pipeline/tts/: __init__.py  base.py  coqui.py
