[project]
name = "voice-pipeline"
version = "0.1.0"
description = "Modular STT → LLM → TTS pipeline service replacing ElevenLabs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "websockets>=13",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_pipeline"]

